Fix comment style, whitespace and preview comment

--- a/src/assets/styles/settings/variables.scss
+++ b/src/assets/styles/settings/variables.scss
@@ -15,8 +15,8 @@ $color-border: #f6f6f6;
 // Helper colors for form error states
 $color-disabled: #000000;
 $color-disabled-border: #000000;
-$color-error: #000000;
-$color-error-bg: #000000;
+$color-error: #ff6d6d;
+$color-error-bg: #ffffff;
 $color-success: #000000;
 $color-success-bg: #000000;
 
